# blocksense-fhe-oracle

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yaml  ci.yml
contracts/: .env.example  .gitignore  FHEOracle.sol  hardhat.config.js  package.json
contracts/contracts/: FHEOracle.sol
contracts/scripts/: deploy.js
contracts/test/: FHEOracle.test.js
docs/: ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE.md  HARDHAT.md  INTEGRATION.md  WEEK3-COMPLETION-REPORT.md  WEEK3-STUDY-NOTES.md  WEEK4-COMPLETION-REPORT.md  WEEK4-PLAN.md  WEEK4-PROGRESS.md  ZAMA-INTEGRATION.md  mvp-sprint-plan.md  quantization-spec.md
examples/: Cargo.toml  aggregation.rs  fhe_module.rs  integration_tests.rs  main.rs  modular_arithmetic.rs  share_verification.rs  test_comparison.rs  tfhe_simple.rs  threshold_decryption.rs  week4_example.rs  zama_integer_sum.rs  zama_study.rs
sdk/: .eslintrc.json  encrypt.js  package-lock.json  package.json
tests/: quantization.test.js  quantization_test.rs
