[package]
name = "blocksense-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zama_integer_sum"
path = "zama_integer_sum.rs"

[[bin]]
name = "tfhe_simple"
path = "tfhe_simple.rs"

[[bin]]
name = "aggregation"
path = "main.rs"

[[bin]]
name = "test_comparison"
path = "test_comparison.rs"

[[bin]]
name = "week4_example"
path = "week4_example.rs"

[dependencies]
tfhe = "1.4.2"
